@@ -180,6 +180,8 @@ bool jshGetDevicePath(IOEventFlags device, char *buf, size_t bufSize) {
   return success;
 }
 
+
+
 // ----------------------------------------------------------------------------
 // for non-blocking IO
 #ifdef __MINGW32__
@@ -299,7 +301,7 @@ void jshInputThread() {
       }
 #endif
 
-    usleep(shortSleep ? 1000 : 50000);
+    jshDelayMicroseconds(shortSleep ? 1000 : 50000);
   }
 }
 
@@ -435,7 +437,10 @@ bool jshIsInInterrupt() {
 }
 
 void jshDelayMicroseconds(int microsec) {
-  usleep(microsec);
+  struct timeval tv;
+  tv.tv_sec  = microsec / 1000000;
+  tv.tv_usec = (suseconds_t) microsec % 1000000;
+  select( 0, NULL, NULL, NULL, &tv );
 }
 
 void jshPinSetState(Pin pin, JshPinState state) {
@@ -567,7 +572,7 @@ void jshPinPulse(Pin pin, bool value, JsVarFloat time) {
   if (jshIsPinValid(pin)) {
     jshPinSetState(pin, JSHPINSTATE_GPIO_OUT);
     jshPinSetValue(pin, value);
-    usleep(time*1000000);
+    jshDelayMicroseconds(time*1000000);
     jshPinSetValue(pin, !value);
   } else jsError("Invalid pin!");
 }
@@ -791,7 +796,7 @@ bool jshSleep(JsSysTime timeUntilWake) {
   if (usecs > 50000)
     usecs = 50000; // don't want to sleep too much (user input/HTTP/etc)
   if (usecs >= 1000)  
-    usleep(usecs); 
+    jshDelayMicroseconds(usecs);
   return true;
 }
 
